# karuta-sniper

./: .gitignore  README.md  main.py  ocr_openai.py  ocr_utils.py  pyproject.toml  utils.py
