[project]
name = "karuta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py-self>=2.0.1",
    "numpy>=2.2.6",
    "openai>=2.6.1",
    "opencv-python-headless>=4.11.0.86",
    "pydantic>=2.12.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
]
